Fixes header items broken on IE11

--- a/Elenore/layout/header.sass
+++ b/Elenore/layout/header.sass
@@ -36,7 +36,7 @@
     max-height: 24px
   a
     color: $text
-    flex: 1
+    flex-grow: 1
     &:hover
       color: $link-hover
     &.is-active
